gen/MyParser.java
// Generated from D:/Dem Bois/College/Fourth Year 2/AngularCompiler (Only allowed in 2nd Semester)/src/MyParser.g4 by ANTLR 4.13.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WhiteSpace=1, NotTypeEquals=2, NotEquals=3, TypeEquals=4, Equals=5, Assign=6, 
		MinusOne=7, MinusSomething=8, Minus=9, PlusOne=10, PlusSomething=11, Plus=12, 
		Divide=13, Multiply=14, Overflow=15, OpenBracket=16, CloseBracket=17, 
		OpenCurlyBracket=18, CloseCurlyBracket=19, OpenArrayBracket=20, CloseArrayBracket=21, 
		SingleQuotation=22, DoubleQuotation=23, BackTick=24, Reference=25, SmallerOrEqualsOperator=26, 
		LargerOrEqualsOperator=27, SmallerOperator=28, LargerOperator=29, NullOperator=30, 
		DoubleColon=31, SemiColon=32, Dot=33, Comma=34, Escape=35, And=36, Or=37, 
		Not=38, ArrowFunction=39, True=40, False=41, If=42, Else=43, Switch=44, 
		Case=45, Default=46, For=47, While=48, Do=49, Break=50, Continue=51, Throw=52, 
		Try=53, Catch=54, Finally=55, TypeOf=56, InstanceOf=57, In=58, New=59, 
		This=60, Super=61, String=62, Number=63, Boolean=64, Any=65, Void=66, 
		Unknown=67, Set=68, Map=69, Record=70, Object=71, Static=72, Public=73, 
		Private=74, Protected=75, Var=76, Let=77, Const=78, Return=79, Function=80, 
		Class=81, Extends=82, Implements=83, Import=84, From=85, As=86, Export=87, 
		Console=88, Log=89, Selector=90, Standalone=91, Template=92, OnInit=93, 
		OnDestroy=94, OnChanges=95, OnAfterViewInit=96, Numbers=97, Identifier=98, 
		StringLiteral=99, Html=100;
	public static final int
		RULE_page = 0, RULE_statement = 1, RULE_declaration = 2, RULE_actions = 3, 
		RULE_controlFlow = 4, RULE_structures = 5, RULE_importRule = 6, RULE_importedObject = 7, 
		RULE_decorator = 8, RULE_cssSelector = 9, RULE_decoratorStandalone = 10, 
		RULE_htmlTemplate = 11, RULE_const = 12, RULE_var = 13, RULE_let = 14, 
		RULE_constArray = 15, RULE_varArray = 16, RULE_letArray = 17, RULE_objectLiteralAttributeAssignment = 18, 
		RULE_objectLiteral = 19, RULE_array = 20, RULE_object = 21, RULE_assign = 22, 
		RULE_plusSomething = 23, RULE_minusSomething = 24, RULE_ifStatement = 25, 
		RULE_whileStatement = 26, RULE_expression = 27, RULE_logicalExpression = 28, 
		RULE_comparisonExpression = 29, RULE_additiveExpression = 30, RULE_multiplicativeExpression = 31, 
		RULE_atomicExpression = 32, RULE_calls = 33, RULE_dataContainers = 34, 
		RULE_groupedExpression = 35, RULE_literal = 36, RULE_memberAccess = 37, 
		RULE_methodCall = 38, RULE_functionCall = 39, RULE_print = 40, RULE_hooks = 41, 
		RULE_onInit = 42, RULE_onDestroy = 43, RULE_onChanges = 44, RULE_onAfterViewInit = 45, 
		RULE_class = 46, RULE_classScope = 47, RULE_classField = 48, RULE_classFunctionDefinition = 49, 
		RULE_privacyType = 50, RULE_classFunction = 51, RULE_field = 52, RULE_fieldDeclaration = 53, 
		RULE_typeAnnotation = 54, RULE_type = 55, RULE_primitiveType = 56, RULE_genericType = 57, 
		RULE_genericTypeInstance = 58, RULE_scope = 59, RULE_function = 60, RULE_functionScope = 61, 
		RULE_parameters = 62, RULE_returnStatement = 63, RULE_id = 64;
	private static String[] makeRuleNames() {
		return new String[] {
			"page", "statement", "declaration", "actions", "controlFlow", "structures", 
			"importRule", "importedObject", "decorator", "cssSelector", "decoratorStandalone", 
			"htmlTemplate", "const", "var", "let", "constArray", "varArray", "letArray", 
			"objectLiteralAttributeAssignment", "objectLiteral", "array", "object", 
			"assign", "plusSomething", "minusSomething", "ifStatement", "whileStatement", 
			"expression", "logicalExpression", "comparisonExpression", "additiveExpression", 
			"multiplicativeExpression", "atomicExpression", "calls", "dataContainers", 
			"groupedExpression", "literal", "memberAccess", "methodCall", "functionCall", 
			"print", "hooks", "onInit", "onDestroy", "onChanges", "onAfterViewInit", 
			"class", "classScope", "classField", "classFunctionDefinition", "privacyType", 
			"classFunction", "field", "fieldDeclaration", "typeAnnotation", "type", 
			"primitiveType", "genericType", "genericTypeInstance", "scope", "function", 
			"functionScope", "parameters", "returnStatement", "id"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'!=='", "'!='", "'==='", "'=='", "'='", "'--'", "'-='", 
			"'-'", "'++'", "'+='", "'+'", "'/'", "'*'", "'%'", "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "'''", "'\"'", "'`'", "'@'", "'<='", "'>='", "'<'", 
			"'>'", "'?'", "':'", "';'", "'.'", "','", "'\\'", "'&&'", "'||'", "'!'", 
			"'=>'", "'true'", "'false'", "'if'", "'else'", "'switch'", "'case'", 
			"'default'", "'for'", "'while'", "'do'", "'break'", "'continue'", "'throw'", 
			"'try'", "'catch'", "'finally'", "'typeof'", "'instanceof'", "'in'", 
			"'new'", "'this'", "'super'", "'string'", "'number'", "'boolean'", "'any'", 
			"'void'", "'unknown'", "'Set'", "'Map'", "'Record'", "'object'", "'static'", 
			"'public'", "'private'", "'protected'", "'var'", "'let'", "'const'", 
			"'return'", "'function'", "'class'", "'extends'", "'implements'", "'import'", 
			"'from'", "'as'", "'export'", "'console'", "'log'", "'selector'", "'standalone'", 
			"'template'", "'ngOnInit'", "'ngOnDestroy'", "'ngOnChanges'", "'ngAfterViewInit'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WhiteSpace", "NotTypeEquals", "NotEquals", "TypeEquals", "Equals", 
			"Assign", "MinusOne", "MinusSomething", "Minus", "PlusOne", "PlusSomething", 
			"Plus", "Divide", "Multiply", "Overflow", "OpenBracket", "CloseBracket", 
			"OpenCurlyBracket", "CloseCurlyBracket", "OpenArrayBracket", "CloseArrayBracket", 
			"SingleQuotation", "DoubleQuotation", "BackTick", "Reference", "SmallerOrEqualsOperator", 
			"LargerOrEqualsOperator", "SmallerOperator", "LargerOperator", "NullOperator", 
			"DoubleColon", "SemiColon", "Dot", "Comma", "Escape", "And", "Or", "Not", 
			"ArrowFunction", "True", "False", "If", "Else", "Switch", "Case", "Default", 
			"For", "While", "Do", "Break", "Continue", "Throw", "Try", "Catch", "Finally", 
			"TypeOf", "InstanceOf", "In", "New", "This", "Super", "String", "Number", 
			"Boolean", "Any", "Void", "Unknown", "Set", "Map", "Record", "Object", 
			"Static", "Public", "Private", "Protected", "Var", "Let", "Const", "Return", 
			"Function", "Class", "Extends", "Implements", "Import", "From", "As", 
			"Export", "Console", "Log", "Selector", "Standalone", "Template", "OnInit", 
			"OnDestroy", "OnChanges", "OnAfterViewInit", "Numbers", "Identifier", 
			"StringLiteral", "Html"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PageContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 285873058152448L) != 0) || ((((_la - 76)) & ~0x3f) == 0 && ((1L << (_la - 76)) & 4200759L) != 0)) {
				{
				{
				setState(130);
				statement();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ImportRuleContext importRule() {
			return getRuleContext(ImportRuleContext.class,0);
		}
		public DecoratorContext decorator() {
			return getRuleContext(DecoratorContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public ControlFlowContext controlFlow() {
			return getRuleContext(ControlFlowContext.class,0);
		}
		public StructuresContext structures() {
			return getRuleContext(StructuresContext.class,0);
		}
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				importRule();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				decorator();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(139);
				controlFlow();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(140);
				structures();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(141);
				actions();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(142);
				function();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public ConstContext const_() {
			return getRuleContext(ConstContext.class,0);
		}
		public LetContext let() {
			return getRuleContext(LetContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public ConstArrayContext constArray() {
			return getRuleContext(ConstArrayContext.class,0);
		}
		public LetArrayContext letArray() {
			return getRuleContext(LetArrayContext.class,0);
		}
		public VarArrayContext varArray() {
			return getRuleContext(VarArrayContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				const_();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				let();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				var();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(148);
				constArray();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(149);
				letArray();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(150);
				varArray();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActionsContext extends ParserRuleContext {
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ActionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterActions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitActions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitActions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionsContext actions() throws RecognitionException {
		ActionsContext _localctx = new ActionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actions);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Console:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				print();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				assign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ControlFlowContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ControlFlowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlFlow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterControlFlow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitControlFlow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitControlFlow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlFlowContext controlFlow() throws RecognitionException {
		ControlFlowContext _localctx = new ControlFlowContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_controlFlow);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case If:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				ifStatement();
				}
				break;
			case While:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				whileStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructuresContext extends ParserRuleContext {
		public GroupedExpressionContext groupedExpression() {
			return getRuleContext(GroupedExpressionContext.class,0);
		}
		public List<TerminalNode> SemiColon() { return getTokens(MyParser.SemiColon); }
		public TerminalNode SemiColon(int i) {
			return getToken(MyParser.SemiColon, i);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public ClassContext class_() {
			return getRuleContext(ClassContext.class,0);
		}
		public StructuresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structures; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterStructures(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitStructures(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitStructures(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructuresContext structures() throws RecognitionException {
		StructuresContext _localctx = new StructuresContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_structures);
		int _la;
		try {
			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpenBracket:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				groupedExpression();
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SemiColon) {
					{
					{
					setState(162);
					match(SemiColon);
					}
					}
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case OpenCurlyBracket:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				object();
				}
				break;
			case OpenArrayBracket:
				enterOuterAlt(_localctx, 3);
				{
				setState(169);
				array();
				}
				break;
			case Class:
			case Export:
				enterOuterAlt(_localctx, 4);
				{
				setState(170);
				class_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportRuleContext extends ParserRuleContext {
		public TerminalNode Import() { return getToken(MyParser.Import, 0); }
		public TerminalNode StringLiteral() { return getToken(MyParser.StringLiteral, 0); }
		public ImportedObjectContext importedObject() {
			return getRuleContext(ImportedObjectContext.class,0);
		}
		public TerminalNode From() { return getToken(MyParser.From, 0); }
		public List<TerminalNode> SemiColon() { return getTokens(MyParser.SemiColon); }
		public TerminalNode SemiColon(int i) {
			return getToken(MyParser.SemiColon, i);
		}
		public ImportRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterImportRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitImportRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitImportRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportRuleContext importRule() throws RecognitionException {
		ImportRuleContext _localctx = new ImportRuleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(Import);
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OpenCurlyBracket) {
				{
				setState(174);
				importedObject();
				setState(175);
				match(From);
				}
			}

			setState(179);
			match(StringLiteral);
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SemiColon) {
				{
				{
				setState(180);
				match(SemiColon);
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportedObjectContext extends ParserRuleContext {
		public TerminalNode OpenCurlyBracket() { return getToken(MyParser.OpenCurlyBracket, 0); }
		public TerminalNode CloseCurlyBracket() { return getToken(MyParser.CloseCurlyBracket, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<TerminalNode> SemiColon() { return getTokens(MyParser.SemiColon); }
		public TerminalNode SemiColon(int i) {
			return getToken(MyParser.SemiColon, i);
		}
		public List<TerminalNode> Comma() { return getTokens(MyParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MyParser.Comma, i);
		}
		public ImportedObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importedObject; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterImportedObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitImportedObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitImportedObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportedObjectContext importedObject() throws RecognitionException {
		ImportedObjectContext _localctx = new ImportedObjectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_importedObject);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(OpenCurlyBracket);
			setState(191); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(187);
				id();
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Comma) {
					{
					setState(188);
					match(Comma);
					}
				}

				}
				}
				setState(193); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Identifier );
			setState(195);
			match(CloseCurlyBracket);
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SemiColon) {
				{
				{
				setState(196);
				match(SemiColon);
				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
